# life-os

./: .env.example  README.md  app.py  pyproject.toml
life_os/: __init__.py  daily_briefing.py  mvp_readiness.py  telegram.py  workflows.py
src/jarvis/: main.py
src/jarvis/agents/: base.py  router.py  specialists.py
src/jarvis/api/: main.py
src/jarvis/bot/: telegram_bot.py
src/jarvis/core/: config.py  logging.py
src/jarvis/schemas/: common.py
src/jarvis/services/: approval.py  briefing_sources.py
src/jarvis/storage/: repository.py
src/jarvis/workflows/: daily_briefing_formatter.py  scheduler.py
tests/: test_approval_flow.py  test_briefing_commands.py  test_config.py  test_daily_briefing.py  test_daily_briefing_formatter.py  test_mvp_readiness.py  test_telegram.py  test_telegram_bot.py  test_workflows.py
